--- a/ty_mujeestvenniy.html
+++ b/ty_mujeestvenniy.html
@@ -19,7 +19,7 @@
     </main>
 
     <footer>
-        <p>Сделано с любовью ❤️</p>
+        <p>С любовью от Алиночки ❤️</p>
     </footer>
 </body>
 </html>
