--- a/ty_silniy.html
+++ b/ty_silniy.html
@@ -16,7 +16,7 @@
 
     <main>
         <div class="container">
-            <p>Поэтому я хочу подарить тебе массаж.</p>
+            <p class="main-text">Поэтому я хочу подарить тебе массаж.</p>
             <a href="index.html" class="button">Вернуться на главную</a>
         </div>
     </main>
