--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 </head>
 <body>
     <header>
-        <h1>С 23 февраля, любовь моя! UwU</h1>
+        <h1>С 23 февраля, любовь моя!</h1>
     </header>
 
     <main>
         <div class="container">
-            <h2>Хочешь знать, почему я тебя люблю?</h2>
+            <h2 class="special-text">Хочешь знать, почему я тебя люблю?</h2>
             <a href="ty_silniy.html" class="button">Ты сильный</a>
             <a href="ty_zabotliviy.html" class="button">Ты заботливый</a>
             <a href="ty_mujeestvenniy.html" class="button">Ты мужественный</a>
