--- a/ty_zabotliviy.html
+++ b/ty_zabotliviy.html
@@ -16,7 +16,7 @@
 
     <main>
         <div class="container">
-            <p class="main-text">Поэтому я хочу позаботиться о тебе.</p>
+            <p class="special-text">Поэтому я хочу позаботиться о тебе</p>
             <a href="index.html" class="button">Вернуться на главную</a>
         </div>
     </main>
