--- a/ty_mujeestvenniy.html
+++ b/ty_mujeestvenniy.html
@@ -16,7 +16,7 @@
 
     <main>
         <div class="container">
-            <p class="main-text">Поэтому я хочу, чтобы ты провел время в соответствующей атмосфере.</p>
+            <p class="special-text">Поэтому я хочу, чтобы ты провел время в соответствующей атмосфере</p>
             <a href="index.html" class="button">Вернуться на главную</a>
         </div>
     </main>
