--- a/ty_silniy.html
+++ b/ty_silniy.html
@@ -17,6 +17,7 @@
     <main>
         <div class="container">
             <p class="special-text">Поэтому я хочу подарить тебе массаж</p>
+            <img src="coupon.jpg" alt="Купон на массаж" class="coupon-image">
             <a href="index.html" class="button">Вернуться на главную</a>
         </div>
     </main>
