--- a/ty_zabotliviy.html
+++ b/ty_zabotliviy.html
@@ -17,6 +17,7 @@
     <main>
         <div class="container">
             <p class="special-text">Поэтому я хочу позаботиться о тебе</p>
+            <img src="coupon2.jpg" alt="Купон на заботу" class="coupon-image">
             <a href="index.html" class="button">Вернуться на главную</a>
         </div>
     </main>
