--- a/ty_mujeestvenniy.html
+++ b/ty_mujeestvenniy.html
@@ -17,6 +17,7 @@
     <main>
         <div class="container">
             <p class="special-text">Поэтому я хочу, чтобы ты провел время в соответствующей атмосфере</p>
+            <img src="coupon3.jpg" alt="Купон на атмосферу" class="coupon-image">
             <a href="index.html" class="button">Вернуться на главную</a>
         </div>
     </main>
